--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,15 +10,16 @@
     <string name="zero_number">0</string>
 
     <!-- activity_main -->
-    <string name="btnMainHearBeat">Heartbeat</string>
+    <string name="btnMainHeartRate">Heart rate</string>
     <string name="btnMainGPS">GPS</string>
     <string name="btnMainPressure">Pressure</string>
     <string name="btnMainAccelerator">Accelerator</string>
     <string name="btnMainPhoto">Photo</string>
 
-    <!-- activity_heart_beat -->
-    <string name="title_activity_heart_beat">Heartbeat</string>
-    <string name="btnStartHeartBeat">Start reading Heartbeat</string>
-    <string name="btnStopHeartBeat">Stop reading heartbeat</string>
+    <!-- activity_heart_rate -->
+    <string name="title_activity_heart_rate">Heart rate</string>
+    <string name="btnStartHeartRate">Start reading Heart rate</string>
+    <string name="btnStopHeartRate">Stop reading heart rate</string>
+    <string name="permissions_ask_for_heart_rate">Need permission to body sensors to be able ro record heart rate</string>
 
 </resources>
